frontend <> fix the overflow of the users and followings

--- a/frontend/src/components/sideBar/style.css
+++ b/frontend/src/components/sideBar/style.css
@@ -14,11 +14,13 @@
     width: 100%;
     height: 40%;
     align-items: center;
+    overflow-y: auto;
 }
 .followings{
     width: 100%;
     height: 40%;
     align-items: center;
+    overflow-y: auto;
 }
 .user-bar-sidebar{
     width: 100%;
